--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li class="nav-item"><a href="marketing-sales.html" class="nav-link">Marketing</a></li>
                     <li class="nav-item"><a href="farm-analytics.html" class="nav-link">Analytics</a></li>
                     <li class="nav-item"><a href="resources.html" class="nav-link">Resources</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
                 </ul>
             </nav>
 
